--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <button>Adicionar</button>
     <ul>
     <ul/>
+    <script src="https://unpkg.com/axios@0.19.2/dist/axios.min.js"></script>
     <script src="./codigo.js"></script>
 </body>
 </html>
