Implementando async/await e fazendo estilizacao

--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css" type="text/css"/>
 </head>
 <body>
-    <input type="text" placeholder="Procure o usuário desejado"/>
-    <button>Adicionar</button>
-    <ul>
-    <ul/>
+    <div class="input-container">
+        <input type="text" placeholder="Procure o usuário desejado"/>
+        <button>Adicionar</button>
+    </div>
+    <div class="list-container">
+        <ul>
+        <ul/>
+    </div>
     <script src="https://unpkg.com/axios@0.19.2/dist/axios.min.js"></script>
     <script src="./codigo.js"></script>
 </body>
