--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,6 @@
         <ul>
         <ul/>
     </div>
-    <script src="https://unpkg.com/axios@0.19.2/dist/axios.min.js"></script>
-    <script src="./codigo.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 </html>
