Fazendo consulta a api atraves da classe

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" type="text/css"/>
+    <link rel="stylesheet" href="./style.css" type="text/css"/>        
 </head>
 <body>
-    <div class="input-container">
+<!--     <div class="input-container">
         <input type="text" placeholder="Procure o usuário desejado"/>
         <button>Adicionar</button>
     </div>
@@ -14,6 +14,19 @@
         <ul>
         <ul/>
     </div>
+    <script src="./bundle.js"></script> -->
+    <form id="repo-form">
+        <input type="text" name="repository">
+        <button type="submit">Adicionar</button>
+    </form>
+    <ul id="repo-list">
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/57147101?v=4" alt="avatar-user"><!--avatar_url-->
+            <strong>P-L-T-S</strong><!--login-->
+            <p>aluma coiasa coisa</p> <!--bio-->
+            <a target="_blank" href="https://api.github.com/users/P-L-T-S">Ver mais</a><!--url-->
+        </li>
+    </ul>
     <script src="./bundle.js"></script>
 </body>
 </html>
